--- a/MT.Core/MT.Core.csproj
+++ b/MT.Core/MT.Core.csproj
@@ -6,6 +6,8 @@
     <Version>0.0.1</Version>
     <PackageId>MultiTenancy.Core</PackageId>
     <Product>MultiTenancy.Core</Product>
+    <Authors>Rafał Ochotny</Authors>
+    <Description>A lightway package to implement MultiTenancy architecture in your .NET Core Applications</Description>
   </PropertyGroup>
 
   <ItemGroup>
