--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -32,7 +32,7 @@ jobs:
     - name: Dotnet build
       run: dotnet build --configuration Release --no-restore
     - name: Dotnet test
-      run: dotnet test --no-restore --verbosity normal
+      run: dotnet test --no-restore
   publish-nuget:
     runs-on: ubuntu-latest
     steps:
