fixed documentation on build

--- a/MT.Core/MT.Core.csproj
+++ b/MT.Core/MT.Core.csproj
@@ -3,14 +3,12 @@
     <PropertyGroup>
         <TargetFramework>netcoreapp3.1</TargetFramework>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-        <Version>0.0.5</Version>
+        <Version>0.0.6</Version>
         <PackageId>MultiTenancy.Core</PackageId>
         <Product>MultiTenancy.Core</Product>
         <Authors>Rafał Ochotny</Authors>
         <Description>A lightway package to implement MultiTenancy architecture in your .NET Core Applications</Description>
-        <PackageReleaseNotes>- Added docs to some methods
-- Package now supports Multi-Tenant Contexts
-</PackageReleaseNotes>
+        <PackageReleaseNotes>- Fixed documentation on nuget</PackageReleaseNotes>
         <RepositoryUrl>https://github.com/rafoch/MT</RepositoryUrl>
         <RepositoryType>git</RepositoryType>
         <PackageTags>Multitenancy;Database;Multi;Tenant</PackageTags>
@@ -21,9 +19,9 @@
 
     </PropertyGroup>
 
-    <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-      <DocumentationFile>G:\Users\Carlton Leatch\source\repos\Tenancy\MT\MT.Core\MT.Core.xml</DocumentationFile>
-    </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+  </PropertyGroup>
 
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
