--- a/MT.Web.Example/MT.Web.Example.csproj
+++ b/MT.Web.Example/MT.Web.Example.csproj
@@ -5,18 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="5.0.5" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.5">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="5.0.5" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.5">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
-    <PackageReference Include="MT.Core.InMemory" Version="0.1.0" />
-    <PackageReference Include="MultiTenancy.Core" Version="0.1.0" />
+    <ProjectReference Include="..\MT.Core.InMemory\MT.Core.InMemory.csproj" />
+    <ProjectReference Include="..\MT.Core\MT.Core.csproj" />
   </ItemGroup>
 
 </Project>
